--- a/output/index.html
+++ b/output/index.html
@@ -3,58 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel Destinations</title>
-    <link rel="stylesheet" href="style.css">
+    <title>My Page</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background-color: #f0f0f0;
+        }
+
+        .container {
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        p {
+            color: #666;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Explore Amazing Travel Destinations</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="destinations.html">Destinations</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section id="hero">
-            <div class="hero-content">
-                <h2>Discover Your Next Adventure</h2>
-                <p>Find the perfect destination for your dream vacation.</p>
-                <a href="destinations.html" class="button">Explore Destinations</a>
-            </div>
-        </section>
-
-        <section id="featured">
-            <h2>Featured Destinations</h2>
-            <div class="destination-grid">
-                <div class="destination-card">
-                    <img src="placeholder.jpg" alt="Destination 1">
-                    <h3>Paris, France</h3>
-                    <p>The City of Lights awaits you with its romantic ambiance and iconic landmarks.</p>
-                    <a href="#" class="button">Learn More</a>
-                </div>
-                <div class="destination-card">
-                    <img src="placeholder.jpg" alt="Destination 2">
-                    <h3>Kyoto, Japan</h3>
-                    <p>Experience the rich culture and stunning beauty of ancient Japan.</p>
-                    <a href="#" class="button">Learn More</a>
-                </div>
-                <div class="destination-card">
-                    <img src="placeholder.jpg" alt="Destination 3">
-                    <h3>Machu Picchu, Peru</h3>
-                    <p>Explore the mysterious ruins of this ancient Inca city high in the Andes Mountains.</p>
-                    <a href="#" class="button">Learn More</a>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2023 Travel Destinations. All rights reserved.</p>
-    </footer>
+    <div class="container">
+        <h1>Welcome!</h1>
+        <p>This is a simple HTML page.</p>
+    </div>
+    <script>
+        // JavaScript code here
+        console.log("Page loaded!");
+    </script>
 </body>
 </html>
