--- a/output/about.html
+++ b/output/about.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>About</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to the Index Page!</h1>
-    <button id="myButton">Go to About</button>
-    <script src="script.js"></script>
+    <h1>About Us</h1>
+    <a href="index.html">Back to Index</a>
 </body>
 </html>
